--- a/ICTO-SW/CCSi/Homepage_STRUCTURES.html
+++ b/ICTO-SW/CCSi/Homepage_STRUCTURES.html
@@ -25,19 +25,19 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Semester 2</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Welcome to the new semester!</em></span>
         </a>-->
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://canvas.uva.nl/courses/43688/files/10343975?module_item_id=1970985">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5;" title="" href="https://canvas.uva.nl/courses/43688/files/10343975?module_item_id=1970985">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Semester 4</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 4 Structures 2023-2024</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://canvas.uva.nl/courses/43688/assignments">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5;" title="" href="https://canvas.uva.nl/courses/43688/assignments">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Assignment deadlines</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Check out this overview of all deadlines</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://rooster.uva.nl/schedule">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5;" title="" href="https://rooster.uva.nl/schedule">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can view your weekly schedule via rooster.uva.nl. if you have downloaded or printed this information, please be aware that times, dates and locations may be subject to change and you should regularly check your online timetable.</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5;" title="" href="https://eur04.safelinks.protection.outlook.com/ap/x-59584e83/?url=https%3A%2F%2Famsuni.sharepoint.com%2F%3Ax%3A%2Fs%2FFMG_SW_FMG___SW___Cssci%2FEdPTVgR7MNlNqLLbJI6iDoEB8kHW8xzuCAmvwtT7ftZj3Q&data=05%7C02%7Cicto-csw%40uva.nl%7Cb207433747ee4a90cea708dc2e1c6433%7Ca0f1cacd618c4403b94576fb3d6874e5%7C0%7C0%7C638435946673449055%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C0%7C%7C%7C&sdata=zYQ0xm1Dq1iW63HU%2BXWbDo1VQj0MRoMuWxNp9gFGlIc%3D&reserved=0">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">TA Support Hours</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>In need of support from you Learning Team TA of Digital Expertise TA? Please check where and when you can find them!</em></span>
         </a>
@@ -50,65 +50,65 @@
     <div id="Modules" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
 
         <!--Buttons-->
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #74a5c5; title="All modules" href="https://canvas.uva.nl/courses/43688/modules">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">All modules</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #74a5c5;" title="All modules" href="https://canvas.uva.nl/courses/43688/modules">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">All modules</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 1: September 5-9" href="/courses/43688/modules/371927?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 1: February 5 - 9</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 1: September 5-9" href="/courses/43688/modules/371927?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 1: February 5 - 9</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 2: September 12-16" href="/courses/43688/modules/371928?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 2: February 12 - 16</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 2: September 12-16" href="/courses/43688/modules/371928?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 2: February 12 - 16</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 3: September 19-23" href="/courses/43688/modules/371929?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 3: February 19 - 23</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 3: September 19-23" href="/courses/43688/modules/371929?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 3: February 19 - 23</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 4: September 26-30" href="/courses/43688/modules/371930?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 4: February 26 - March 1</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 4: September 26-30" href="/courses/43688/modules/371930?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 4: February 26 - March 1</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 5: October 3-7" href="/courses/43688/modules/371931?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 5: March 4 - 8</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 5: October 3-7" href="/courses/43688/modules/371931?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 5: March 4 - 8</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 6: October 10-14" href="/courses/43688/modules/371932?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 6: March 11 - 15</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 6: October 10-14" href="/courses/43688/modules/371932?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 6: March 11 - 15</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 7: October 17-21" href="/courses/43688/modules/371933?wrap=">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 7: March 18 - 22</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 7: October 17-21" href="/courses/43688/modules/371933?wrap=">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 7: March 18 - 22</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 8: October 24-28" href="/courses/43688/modules/371934?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 8: March 25 - 29</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 8: October 24-28" href="/courses/43688/modules/371934?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 8: March 25 - 29</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 9: October 31 - November 4" href="/courses/43688/modules/371935?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 9: April 1 - 5</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 9: October 31 - November 4" href="/courses/43688/modules/371935?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 9: April 1 - 5</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 10: November 7-11" href="/courses/43688/modules/371936?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 10: April 8 - 12</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 10: November 7-11" href="/courses/43688/modules/371936?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 10: April 8 - 12</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 11: November 14-18" href="/courses/43688/modules/371937?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 11: April 15 - 19</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 11: November 14-18" href="/courses/43688/modules/371937?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 11: April 15 - 19</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 12: November 21-25" href="/courses/43688/modules/371938?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 12: April 22 - 26</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 12: November 21-25" href="/courses/43688/modules/371938?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 12: April 22 - 26</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 13: November 28-  December 2" href="/courses/43688/modules/371939?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 13: May 6 - 10</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 13: November 28-  December 2" href="/courses/43688/modules/371939?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 13: May 6 - 10</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 14: December 5-9" href="/courses/43688/modules/371940?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 14: May 13 - 17</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 14: December 5-9" href="/courses/43688/modules/371940?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 14: May 13 - 17</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 15: December 12-16" href="/courses/43688/modules/371941?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 15: May 20 - 24</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 15: December 12-16" href="/courses/43688/modules/371941?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 15: May 20 - 24</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 16: December 19-23" href="/courses/43688/modules/371942?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 16: May 27 - May 31</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 16: December 19-23" href="/courses/43688/modules/371942?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 16: May 27 - May 31</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 17: January 9-13" href="/courses/43688/modules/371943?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 17: June 3 - 7</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 17: January 9-13" href="/courses/43688/modules/371943?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 17: June 3 - 7</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 18: January 16-20" href="/courses/43688/modules/371944?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 18: June 10 - 14</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 18: January 16-20" href="/courses/43688/modules/371944?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 18: June 10 - 14</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5; title="Week 19: January 23-27" href="/courses/43688/modules/371945?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 19: June 17 - 21</span>
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #74a5c5;" title="Week 19: January 23-27" href="/courses/43688/modules/371945?wrap=1">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">Week 19: June 17 - 21</span>
         </a>
        
     </div>
